# battery-monitor

./: bun.lockb  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BatteryMonitorComponent.tsx
